--- a/demo-about.html
+++ b/demo-about.html
@@ -1,2 +1,9 @@
 <h1>About this app</h1>
-<p>created by Makzan, 2016</p>
+<p>Created by Makzan, 2016</p>
+<p>Thanks <span id='name'></span>for using the app.</p>
+
+<script>
+  function hello(name) {
+    document.getElementById('name').innerHTML = name + ' ';
+  }
+</script>
